# EE478_final

./: .gitignore  README.md  frames.gv  install_jetson_tuning.sh  pin_cpu.sh  preflight_check.sh  reset_camera.sh  setup_env.sh  yolo_test.py
.claude/: settings.json
docs/: final_launch_report.md
fc_backup/: px4_params_backup.txt  px4_params_vision_working.txt
kalibr_cal/: README.md  april_6x6.yaml  aprilgrid.yaml  imu_pixhawk.yaml
src/: drone_worlds
src/VINS-Fusion/camera_models/: CMakeLists.txt
src/VINS-Fusion/camera_models/src/: intrinsic_calib.cc
src/VINS-Fusion/camera_models/src/calib/: CameraCalibration.cc
src/VINS-Fusion/camera_models/src/chessboard/: Chessboard.cc
src/VINS-Fusion/config/drt/: camera_infra1.yaml  micro_swarm_stereo_imu_config.yaml
src/VINS-Fusion/config/euroc/: micro.yaml
src/VINS-Fusion/config/micro/: camera_infra1.yaml  camera_infra2.yaml  micro_swarm_stereo_imu_config.yaml
src/VINS-Fusion/config/realsense_d435i/: left.yaml  realsense_stereo_imu_config.yaml  realsense_stereo_pixhawk_config.yaml  realsense_stereo_vo_config.yaml  right.yaml
src/VINS-Fusion/global_fusion/: CMakeLists.txt
src/VINS-Fusion/loop_fusion/: CMakeLists.txt
src/VINS-Fusion/loop_fusion/src/: keyframe.cpp  pose_graph.cpp
src/VINS-Fusion/vins_estimator/: CMakeLists.txt
src/VINS-Fusion/vins_estimator/src/: KITTIGPSTest.cpp  KITTIOdomTest.cpp
src/VINS-Fusion/vins_estimator/src/featureTracker/: feature_tracker.cpp
src/ee478_agent/: CMakeLists.txt  package.xml
src/ee478_agent/config/: store_coords.yaml
src/ee478_agent/scripts/: command_interpreter_node.py  final_mission_node.py  gate_quiz_node.py  land_node.py  llm_agent_core_node.py  mission_fsm_node.py  precision_land_node.py  quiz_solver_node.py  signature_move_node.py
src/ee478_bringup/: CMakeLists.txt  package.xml
src/ee478_bringup/config/: d435i_svo.yaml  px4_pluginlists.yaml  svo_vo_stereo.yaml
src/ee478_bringup/launch/: delivery_cameras.launch  down_camera.launch  drone_bringup.launch  ego_test.launch  final.launch  final_lastgate.launch  flight_test.launch  kalibr_record.launch  llm_agent.launch  mission.launch  px4_real.launch  px4_sitl.launch  realsense_d435i_vins.launch  record.launch  slam_assist_vins.launch  slam_monitor_svo.launch  slam_monitor_vins.launch  vio_only.launch  yolo_check.launch
src/ee478_bringup/launch/subtasks/: README.md  s1_takeoff.launch  s2_command_read.launch  s3_quiz_solve.launch  s4_gate_quiz.launch  s4_nav_course.launch  s5_precision_land.launch  s5_store_select.launch  s6_signature.launch  s7_return_gate.launch  s8_land.launch
src/ee478_bringup/rviz/: ego_monitor.rviz  ego_test.rviz  flight_review.rviz  slam_monitor_vins.rviz  svo_monitor.rviz
src/ee478_bringup/scripts/: delivery_trigger_node.py  pose_to_path_node.py  pull_flight.sh  px4_param_setter.py  review_flight.sh  set_ir_exposure.sh  set_mpc_limits.sh  waypoint_markers.py  yolo_delivery_node.py
src/ee478_localization/: CMakeLists.txt  package.xml
src/ee478_localization/config/: apriltag_anchors.yaml  iris_cam0.yaml  iris_vins_sim.yaml
src/ee478_localization/launch/: apriltag_anchor.launch  rtabmap_sim.launch  svo_real.launch  vins_real.launch  vins_sim.launch
src/ee478_localization/scripts/: apriltag_anchor_node.py  camera_pose_publisher_node.py  gt_vision_bridge_node.py  landmark_anchor_publisher_node.py  odom_tf_broadcaster_node.py  sim_landmark_anchor_node.py  svo_exposure_gate.sh  svo_vision_relay_node.py  vins_excitation_node.py  vio_bridge_node.py
src/ee478_msgs/: CMakeLists.txt  package.xml
src/ee478_msgs/msg/: QuizGate.msg  QuizGateArray.msg  SemanticMap.msg  SignboardArray.msg  SignboardObservation.msg  StoreEntry.msg  TargetDetection.msg
src/ee478_perception/: CMakeLists.txt  package.xml
src/ee478_perception/scripts/: sim_world_publisher_node.py  store_identifier_node.py  world_cloud_publisher_node.py
src/ee478_planner/: CMakeLists.txt  package.xml
src/ee478_planner/launch/: ego_planner.launch
src/ee478_planner/scripts/: agent_interface_node.py  direct_goal_follower.py  ego_bridge_node.py  offboard_controller.py  rviz_goal_relay_node.py  svo_to_mavros_node.py  waypoint_loop_node.py
src/ego_planner_v2/planner/plan_manage/: CMakeLists.txt
src/ego_planner_v2/planner/plan_manage/launch/include/: advanced_param.xml
src/ego_planner_v2/planner/plan_manage/src/: ego_replan_fsm.cpp
src/gpt_llm_client/: CMakeLists.txt  README.md  package.xml
src/gpt_llm_client/scripts/: memory_llm_client.py  simple_llm_client.py
src/gpt_llm_client/scripts/history/: session_1764240135.jsonl  session_1764240319.jsonl
