<?xml version="1.0"?>
<package format="2">
  <name>ee478_localization</name>
  <version>0.1.0</version>
  <description>
    Glue between VINS-Fusion (visual-inertial odometry) and PX4 EKF2
    (via /mavros/vision_pose). Includes safety gates against VO
    tracking loss and a sparse-landmark anchor input that corrects
    accumulated VO drift.
  </description>
  <maintainer email="woongrae@kaist.ac.kr">Woongrae Bae</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>mavros</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>ee478_msgs</exec_depend>
</package>
