<?xml version="1.0"?>
<package format="2">
  <name>gpt_llm_client</name>
  <version>0.0.1</version>
  <description>OpenAI LLM client for ROS1 Noetic</description>

  <maintainer email="sungjae_min@kaist.ac.kr">Sungjae Min</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
